--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                                     <div class="col-md-12">
                                        <div class="testimonial_box">
                                           <figure><img src="images/owner.jpg" alt="#"/></figure>
-                                          <h3>Luda Johnson <br><span class="kisu">( Owner)</span></h3>
+                                          <h3>Naser Ali Ghuloum Mousa Alobeidli <br><span class="kisu">( Managing Director)</span></h3>
                                           <!--<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 year</p>-->
                                        </div>
                                     </div>
@@ -471,7 +471,7 @@
                                     <div class="col-md-12">
                                        <div class="testimonial_box">
                                           <figure><img src="images/ceo.jpg" alt="#"/></figure>
-                                          <h3>Luda Johnson <br><span class="kisu">( CEO)</span></h3>
+                                          <h3>Shamseer Kunnoth Syedmuyyarikkandy Moidu <br><span class="kisu">( CEO)</span></h3>
                                           <!--<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 year</p>-->
                                        </div>
                                     </div>
