--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                                  <div class="row">
                                     <div class="col-md-12">
                                        <div class="testimonial_box">
-                                          <figure><img src="images/ceo.jpg" alt="#"/></figure>
+                                          <figure><img src="images/ceo.JPG" alt="#"/></figure>
                                           <h3>Shamseer Kunnoth Syedmuyyarikkandy Moidu <br><span class="kisu">( CEO)</span></h3>
                                           <!--<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 year</p>-->
                                        </div>
