--- a/index.html
+++ b/index.html
@@ -631,26 +631,42 @@
       <footer>
          <div class="footer bottom_cross1">
             <div class="container">
-               <div class="row">
-                  <div class="col-md-6">
-                     <ul class="location_icon">
-                         <li>
-                             <a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a> Address : Mussaffah, MBZ, Mazyad Mall, Tower 1, <br>  floor 9, office 17
-                         </li>
-                         <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i></a>Phone : <p><a href="tel:+971529987810">+971529987810</a> <br />
-                         <a href="tel:+971529987811">+971529987811</a><br /> <a href="tel:+971529987812">+971529987812</a></li>
-                         <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>Email : <p><a href="mailto:transportsupersaver@gmail.com">transportsupersaver@gmail.com</a></p></li>
-                     </ul>
-                     
-                  </div>
-                  <div class="col-md-6">
-                      <div class="map">
-                          <!--<figure><img src="images/map.png" alt="#"/></figure>-->
-                          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d116295.31831798835!2d54.455604876816224!3d24.373346398081388!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5e4724773662f7%3A0xc3e57ade689f9c02!2sMazyad%20Mall!5e0!3m2!1sen!2sin!4v1737971396562!5m2!1sen!2sin" width="600" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                      </div>
-                  </div>
-               </div>
-            </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="col-md-12">
+                            <ul class="location_icon">
+                                <li>
+                                    <a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a> Address : Mussaffah, MBZ, Mazyad Mall, Tower 1, <br>  floor 9, office 17
+                                </li>
+                                <li>
+                                    <a href="#"><i class="fa fa-phone" aria-hidden="true"></i></a>Phone : <p>
+                                        <a href="tel:+971529987810">+971529987810</a> <br />
+                                        <a href="tel:+971529987811">+971529987811</a><br /> <a href="tel:+971529987812">+971529987812</a>
+                                </li>
+                                <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>Email : <p><a href="mailto:transportsupersaver@gmail.com">transportsupersaver@gmail.com</a></p></li>
+                                <li>
+                                    <a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a> <b>Group of companies:</b>
+                                    Super Saver Hypermarket<br />
+                                    Mountain Palace Foodstuff Catering LLC<br />
+                                    Shabnam Baqala<br />
+                                    Golden Mart Baqala
+                                </li>
+</ul>
+
+                        </div>
+                        <div class="col-md-12">
+                           
+                        </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="map">
+                                <!--<figure><img src="images/map.png" alt="#"/></figure>-->
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d116295.31831798835!2d54.455604876816224!3d24.373346398081388!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5e4724773662f7%3A0xc3e57ade689f9c02!2sMazyad%20Mall!5e0!3m2!1sen!2sin!4v1737971396562!5m2!1sen!2sin" width="600" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
             <div class="copyright">
                <div class="container">
                   <div class="row">
